// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButtons Tests should match the snapshot 1`] = `
<div
  className="row"
>
  <div
    className="text-right col-12 col-md-9 py-3 pr-0"
  >
    <Button
      className="p-button-secondary mb-2 mb-sm-0"
      cornerStyleClass="ui-corner-all"
      icon={null}
      iconPos="left"
      id="cancelButton"
      label="cancel.en"
      onClick={[Function]}
      type="button"
    />
     
    <Button
      className="p-button-secondary mb-2 mb-sm-0"
      cornerStyleClass="ui-corner-all"
      icon={null}
      iconPos="left"
      id="saveButton"
      label="save.en"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;

exports[`SubmitButtons Tests should match the snapshot with invisible cancel 1`] = `
<div
  className="row"
>
  <div
    className="text-right col-12 col-md-9 py-3 pr-0"
  >
     
    <Button
      className="p-button-secondary mb-2 mb-sm-0"
      cornerStyleClass="ui-corner-all"
      icon={null}
      iconPos="left"
      id="saveButton"
      label="save.en"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;
